# feed-service/models/createCommentRequest.go
@@ -1,0 +1,6 @@
+package models
+
+type CreateCommentRequest struct {
+	FeedID  uint
+	Content string
+}
